arreglo del git intento 2

--- a/10Postman/.gitignore
+++ b/10Postman/.gitignore
@@ -1,5 +1,5 @@
 # Node.js
-node_modules/         # Depende de las librerías que has instalado con npm
+node_modules         # Depende de las librerías que has instalado con npm
 npm-debug.log         # Archivos de error de npm
 yarn-error.log        # Archivos de error si usas Yarn
 
